ユーザーサービスを作成します

--- a/Yaml/wwwroot/assets/locales/en-US/translation.json
+++ b/Yaml/wwwroot/assets/locales/en-US/translation.json
@@ -5,5 +5,60 @@
     "loginButton": "Login",
     "usernameEmpty": "Username cannot be empty.",
     "pwdEmpty": "Password cannot be empty."
+  },
+  "appInfoPage": {
+    "controller": "Controller",
+    "clusterStorage": "ClusterStorage",
+    "manual": "Manual",
+    "title": "Yamler--CD Controller",
+    "required": "Required",
+    "appName": "AppName",
+    "letter": "※Letter",
+    "containerRegistry": "Container Registry",
+    "crServer": "CR Server",
+    "token": "Token",
+    "mail": "Mail Address",
+    "keyVaultConnection": "Key Vault Connection",
+    "projectName": "Project Name",
+    "projectEnName": "English Project Name",
+    "keyVaultsKey": "(Key Vault's keys)",
+    "newItem": "New Item",
+    "basicSetup": "Basic Setup",
+    "image": "Image",
+    "podNum": "Pod Number",
+    "newCluster": "New Cluster",
+    "option": "option",
+    "clusterName": "Cluster Name",
+    "memory": "Memory",
+    "operation": "Operation",
+    "save": "Save",
+    "download": "Download",
+    "upload": "Upload",
+    "deploy": "Deploy",
+    "number": "Number",
+    "manageLevel": "ManageLevel",
+    "diskSet": "DiskSet",
+    "diskSize": "DiskSize",
+    "diskClass": "DiskClass",
+    "mountPath": "MountPath",
+    "mountName": "MountName",
+    "keyVaultName": "Key Vault Name",
+    "useProject": "UseProject",
+    "keyVaultSet": "Key Vault Set",
+    "filePath": "File Path",
+    "fileLink": "File Link",
+    "domain": "Domain",
+    "domainName": "Domain Name",
+    "newDomain": "New Domain",
+    "privateKey": "Private Key",
+    "certification": "Certification",
+    "configMapSet": "ConfigMap Set(KV)",
+    "configMapFileSet": "ConfigMap Set（FILE）",
+    "confirm": "Confirm",
+    "cancel": "Cancel",
+    "clusterEdition": "Edit Cluster",
+    "prefix": "Prefix"
   }
 }
+
+
