--- a/Yaml/wwwroot/assets/locales/ja/translation.json
+++ b/Yaml/wwwroot/assets/locales/ja/translation.json
@@ -5,5 +5,59 @@
     "loginButton": "ログイン",
     "usernameEmpty": "ユーザー名は空白できません",
     "pwdEmpty": "パスワードは空白できません"
+  },
+  "appInfoPage": {
+    "controller": "CDコントロール",
+    "clusterStorage": "クラウドストア",
+    "manual": "マニュアル",
+    "title": "Yamler--CD Controller",
+    "required": "必須",
+    "appName": "システム・アプリ名",
+    "letter": "※英数字",
+    "containerRegistry": "Container Registry接続",
+    "crServer": "CR サーバー ",
+    "token": "トークン",
+    "mail": "メールアドレス",
+    "keyVaultConnection": "KeyVault接続",
+    "projectName": "項目名",
+    "projectEnName": "項目英語名",
+    "keyVaultsKey": "（keyVaultのキー）",
+    "newItem": "項目追加",
+    "basicSetup": "基本設定",
+    "image": "イメージ",
+    "podNum": "起動POD数",
+    "newCluster": "クラスター追加",
+    "option": "オプション",
+    "clusterName": "クラスター名",
+    "memory": "メモリ",
+    "operation": "操作",
+    "save": "保存",
+    "download": "ダウンロード",
+    "upload": "アップロード",
+    "deploy": "デプロイ",
+    "number": "※数字",
+    "manageLevel": "managedレベル",
+    "diskSet": "Disk設置",
+    "diskSize": "ディスク サイズ",
+    "diskClass": "ディスク クラス",
+    "mountPath": "マウント バ",
+    "mountName": "マウント 名",
+    "keyVaultName": "keyvault名：",
+    "useProject": "使用項目",
+    "keyVaultSet": "KeyVault設置",
+    "filePath": "ファイルパス",
+    "fileLink": "ファイルリンク",
+    "domain": "ドメイン",
+    "domainName": "ドメイン名",
+    "newDomain": "ドメイン追加",
+    "privateKey": "プライベートキー",
+    "certification": "証明書",
+    "configMapSet": "ConfigMap設置(KV)",
+    "configMapFileSet": "ConfigMap設置（FILE）",
+    "confirm": "確定",
+    "cancel": "取消",
+    "clusterEdition": "クラスター編集",
+    "prefix": "Prefix"
   }
 }
+
