--- a/Yaml/wwwroot/assets/locales/zh/translation.json
+++ b/Yaml/wwwroot/assets/locales/zh/translation.json
@@ -5,5 +5,58 @@
     "loginButton": "登录",
     "usernameEmpty": "用户名不能为空",
     "pwdEmpty": "密码不能为空"
+  },
+  "appInfoPage": {
+    "controller": "Controller",
+    "clusterStorage": "集群存储",
+    "manual": "手册",
+    "title": "Yamler--CD Controller",
+    "required": "必须",
+    "appName": "应用名称",
+    "letter": "※英数",
+    "containerRegistry": "容器注册",
+    "crServer": "CR Server",
+    "token": "Token",
+    "mail": "邮箱地址",
+    "keyVaultConnection": "Key Vault 链接",
+    "projectName": "项目名",
+    "projectEnName": "项目英文名称",
+    "keyVaultsKey": "(Key Vault's keys)",
+    "newItem": "项目追加",
+    "basicSetup": "基本设置",
+    "image": "镜像",
+    "podNum": "Pod 数",
+    "newCluster": "新集群",
+    "option": "选项",
+    "clusterName": "集群名称",
+    "memory": "内存",
+    "operation": "操作",
+    "save": "保存",
+    "download": "下载",
+    "upload": "上传",
+    "deploy": "发布",
+    "number": "数字",
+    "manageLevel": "ManageLevel",
+    "diskSet": "磁盘配置",
+    "diskSize": "磁盘大小",
+    "diskClass": "磁盘类",
+    "mountPath": "MountPath",
+    "mountName": "MountName",
+    "keyVaultName": "Key Vault Name",
+    "useProject": "使用项目",
+    "keyVaultSet": "Key Vault Set",
+    "filePath": "文件路径",
+    "fileLink": "文件链接",
+    "domain": "域",
+    "domainName": "域名",
+    "newDomain": "新增域名",
+    "privateKey": "Private Key",
+    "certification": "证书",
+    "configMapSet": "ConfigMap 设置(KV)",
+    "configMapFileSet": "ConfigMap 设置（FILE）",
+    "confirm": "确认",
+    "cancel": "取消",
+    "clusterEdition": "编辑集群",
+    "prefix": "前缀"
   }
 }
