Init web application

--- a/Yaml/wwwroot/assets/locales/ja/translation.json
+++ b/Yaml/wwwroot/assets/locales/ja/translation.json
@@ -1,4 +1,7 @@
 {
+  "common":{
+    "notNull": "{{fieldName}} は空白できません"
+  },
   "login-page": {
     "loginId": "ログインID",
     "password": "パスワード",
