--- a/Yaml/wwwroot/assets/locales/zh/translation.json
+++ b/Yaml/wwwroot/assets/locales/zh/translation.json
@@ -22,7 +22,7 @@
     "projectName": "项目名",
     "projectEnName": "项目英文名称",
     "keyVaultsKey": "(Key Vault's keys)",
-    "newItem": "项目追加",
+    "newItem": "新增",
     "basicSetup": "基本设置",
     "image": "镜像",
     "podNum": "Pod 数",
