Implement Validation Function

--- a/Yaml/wwwroot/assets/locales/en/translation.json
+++ b/Yaml/wwwroot/assets/locales/en/translation.json
@@ -60,6 +60,8 @@
     "clusterEdition": "Edit Cluster",
     "prefix": "Prefix",
     "export": "Export",
-    "notNull": "can not be null"
+    "notNull": "can not be null",
+    "notNull1": "Can not be null",
+    "tableContentNotNull": "If the checkbox is selected, the table cannot be blank."
   }
 }
