--- a/Yaml/wwwroot/assets/locales/ja/translation.json
+++ b/Yaml/wwwroot/assets/locales/ja/translation.json
@@ -65,7 +65,29 @@
     "export": "エクスポート",
     "notNull": "は空白にできません",
     "notNull1": "空白にできません",
-    "tableContentNotNull": "接続チェックボックスが選択されている場合、テーブルは空白にできません"
+    "tableContentNotNull": "接続チェックボックスが選択されている場合、テーブルは空白にできません",
+    "appNameHelpText": "分かりやすいアプリ名を付けてください、ネームスペース名としても使えます",
+    "containerRegistryText": "使用予定のContainer Registryの設置を行います",
+    "crServerText": "CRサーバーのURLを入力してください",
+    "keyVaultConnectionText": "KeyVaultを使う場合、設定されている内容を記載してください。",
+    "projectNameText": "KeyVaultに実際設定しているキーを一つ一つ追加してください。",
+    "NetdataText": "NetDataはK8Sシステムを監視するツールであり、選択するとK8Sシステムにインストールすることになります。",
+    "clusterNameText": "",
+    "imageText": "",
+    "podNumText": "クラスターに起動するPOD数、デフォルト３とします。",
+    "cpuHelpText": "クラスターに付けるCPU数",
+    "memoryHelpText": "クラスターに付けるメモリ",
+    "manageLevelText": "Azureクラウドで権限を付与するため設定項目であり、クラスターに相応の権限を付与する場合、設定してください。",
+    "prefixText": "クラスターのドメイン後ろのPrefixであり、例https://www.sample.com/pre/の「pre」部分はPrefixと言います。",
+    "diskSetText": "クラスターにテスクを利用する場合は、Disk設置を追加しください。",
+    "diskSizeText": "クラスターにテスクを利用する場合は、DiskSize設置を追加しください。",
+    "diskClassText": "クラスターにテスクを利用する場合は、DiskClass設置を追加しください。",
+    "keyVaultSetText": "KeyVaultに設定しているキーのうち、クラスターに利用する場合はここで追加してください。",
+    "useProjectText": "",
+    "configMapSetText": "イメージに利用する常数を追加したい場合は、Key-Valueの形で追加してください。",
+    "domainText": "クラスターに紐づけるドメインを追加してください、複数追加可能です。",
+    "jsonUploadErrorText": "Jsonファイルの形式が間違っています。確認してから再度アップロードしてください。",
+    "jsonUploadSuccessText": "Jsonファイルが正常にアップロードされました。"
   }
 }
 
