--- a/Yaml/wwwroot/assets/locales/ja/translation.json
+++ b/Yaml/wwwroot/assets/locales/ja/translation.json
@@ -43,8 +43,8 @@
     "manageLevel": "managedレベル（aadpodidbinding）",
     "diskSet": "Disk設置",
     "diskSize": "ディスク サイズ",
-    "diskClass": "ディスク クラス",
-    "mountPath": "マウント バ",
+    "diskClass": "マウント クラス",
+    "mountPath": "マウント パス",
     "mountName": "マウント 名",
     "keyVaultName": "keyvault名：",
     "useProject": "使用項目",
