--- a/Yaml/wwwroot/assets/locales/en-US/translation.json
+++ b/Yaml/wwwroot/assets/locales/en-US/translation.json
@@ -37,10 +37,10 @@
     "upload": "Upload",
     "deploy": "Deploy",
     "number": "Number",
-    "manageLevel": "ManageLevel",
+    "manageLevel": "ManageLevel (aadpodidbinding)",
     "diskSet": "DiskSet",
     "diskSize": "DiskSize",
-    "diskClass": "DiskClass",
+    "diskClass": "PVC Name",
     "mountPath": "MountPath",
     "mountName": "MountName",
     "keyVaultName": "Key Vault Name",
