--- a/Yaml/wwwroot/assets/locales/zh-CN/translation.json
+++ b/Yaml/wwwroot/assets/locales/zh-CN/translation.json
@@ -7,6 +7,6 @@
     "pwdEmpty": "密码不能为空"
   },
   "appInfoPage":{
-    "title": "Yamler--CD Controller"
+    "title": "Yamler--GUI tool for CD"
   }
 }
