--- a/Yaml/wwwroot/assets/locales/en/translation.json
+++ b/Yaml/wwwroot/assets/locales/en/translation.json
@@ -11,7 +11,7 @@
     "controller": "Controller",
     "clusterStorage": "ClusterStorage",
     "manual": "Manual",
-    "title": "Yamler--CD Controller",
+    "title": "Yamler--GUI tool for CD",
     "required": "Required",
     "appName": "AppName",
     "letter": "※Letter",
