--- a/Yaml/wwwroot/assets/locales/ja/translation.json
+++ b/Yaml/wwwroot/assets/locales/ja/translation.json
@@ -11,8 +11,8 @@
   },
   "appInfoPage": {
     "all": "全般",
-    "controller": "CDコントロール",
-    "clusterStorage": "クラウドストア",
+    "controller": "Yamler",
+    "clusterStorage": "CloudStorage",
     "manual": "マニュアル",
     "title": "Yamler--GUI tool for CD",
     "required": "必須",
